@@ -1,8 +1,14 @@
-2023-12-01  Charlie Zender  <zender@uci.edu>
+2023-12-06  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.2.0-alpha02 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.2.0-alpha02: Lysanne-a-thon';git push
 	git tag -a 5.2.0-alpha02 -m 'ncks: nco_chk_bnd(); ncremap: trfv2';git push --tags
+
+	* ncks: nco_chk_???() print full-names only when variable or group is not at root level
+
+	* ncks: Finish nco_chk_bnd()
+
+2023-12-01  Charlie Zender  <zender@uci.edu>
 
 	* ncks: nco_chk_bnd() stubs
 
